- voice menu's advanced edit now checks for a minimal format of something like: 	exten=XXX,N,App() ;basically just if each line contains '=' - if there is a format error in voice menu's advanced edit, an error is now properly   displayed and the window is no longer stuck at 'saving...'

--- a/config/stylesheets/schwing.css
+++ b/config/stylesheets/schwing.css
@@ -17,12 +17,15 @@ input:focus {
 	background-color:#FFC58A;
 }
 
-input.inputValidationFailed {
-	font-size : 115%;
+input.inputValidationFailed, textarea.inputValidationFailed {
 	font-weight:bold;
 	border:2px solid #541B1F; 
 	padding : 1px 0px 2px 2px;
 	background-color:#F3A68F;
+}
+
+input.inputValidationFailed {
+	font-size : 115%;
 }
 
 .input8 {
